2006-09-22  Mario Torre  <neugens@limasoftware.net>

	* gnu/testlet/java/text/DecimalFormat/toPattern14.java:
	new file; this test is an update of toPattern for 1.4.
	* gnu/testlet/java/text/DecimalFormat/parse.java (test):
	small fix to the last test to help debugging: now uses the
	mauve check(results, expected) method.
	* gnu/testlet/java/text/DecimalFormat/MaximumAndMinimumDigits.java:
	new file.
	* gnu/testlet/java/text/DecimalFormat/getPositivePrefix.java (test):
	new tests
	* gnu/testlet/java/text/DecimalFormat/formatExp.java (test):
	new test added.

2006-09-22  Tom Tromey  <tromey@redhat.com>

	PR libgcj/29178:
	* gnu/testlet/java/nio/charset/Charset/canEncode.java: New file.

2006-09-22  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/net/NetworkInterface/security.java: New test.
	
2006-09-22  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/net/SocketPermission/argument.java:
	Check that unquoted IPv6 addresses with one-digit first
	components are not incorrectly flagged as errors.

2006-09-22  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JTable/getCellRect.java
	(test): Added new checks.

2006-09-22  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/net/InetAddress/security.java: New test.
	
2006-09-22  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/SizeSequence/getSize.java
	(test): Check indices out of bounds,
	* gnu/testlet/javax/swing/JTable/getRowHeight.java: New test,
	* gnu/testlet/javax/swing/JTable/setRowHeight.java: New test.

2006-09-22  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/TestSecurityManager.java:
	Compare permissions using equals() rather than implies().
	Provide a way for tests to specify that they need implies().
	* gnu/testlet/java/io/File/security.java:
	Use implies() comparisons for temp file tests.

2006-09-21  Casey Marshall  <csm@gnu.org>

	* gnu/testlet/java/nio/channels/Selector/testEmptySelect.java:
	new test.
